# incr-dom-werewolf

./: dune  game_rpcs.opam  game_state.opam  game_types.opam  http_rpc.opam
_build/: .db  .digest-db  .to-delete-in-source-tree  log
_build/.aliases/default/http_rpc/: all-00000000000000000000000000000000
_build/.aliases/default/protocol/: all-00000000000000000000000000000000
_build/.aliases/default/server/: all-00000000000000000000000000000000
_build/default/: .merlin  app.ml  app.pp.ml  main.bc.runtime.js  main.pp.ml
_build/default/.js/async_js/: async_js.cma.js
_build/default/.js/async_kernel/: async_kernel.cma.js
_build/default/.js/async_kernel.persistent_connection_kernel/: persistent_connection_kernel.cma.js
_build/default/.js/base.caml/: caml.cma.js
_build/default/.main.eobjs/: app.pp.ml.d  dune__exe__Main.impl.all-deps  main.pp.ml.d
_build/default/client/: app.ml  app.pp.ml  main.pp.ml
_build/default/http_rpc/: http_rpc.cma  http_rpc.cmxa  http_rpc.cmxs  http_rpc.ml-gen  rpc.mli  rpc.pp.ml  rpc.pp.mli
_build/default/server/: .merlin  main.ml  main.pp.ml
client/: .merlin  app.ml~  dune  dune~  main.ml  main.ml~
http_rpc/: .merlin  dune  dune~  rpc.ml  rpc.mli~  rpc.ml~
protocol/rpcs/: dune~  rpcs.mli  rpcs.mli~  rpcs.ml~
protocol/state/: dune~  game_state.mli  game_state.ml~  night_actions.ml  night_actions.mli~  night_actions.ml~  night_phase.mli~  night_phase.ml~  phase.ml~  results.mli  results.ml~
protocol/types/: card.mli~  card.ml~  dune  dune~  username.mli  username.mli~  username.ml~
server/: dune  dune~  main.ml~
(+253 files in other folders)
