opam-version: "2.0"
name: "game_rpcs"
version: "0.1"
synopsis: "Http rpcs for werewolf game"
description: """
Http rpcs for werewolf game
"""
maintainer: "Jeanne"
authors: "Jeanne"
license: ""
homepage: ""
bug-reports: ""
dev-repo: ""
depends: [ "ocaml" "ocamlfind" ]
build: ["dune" "build" "-p" name "-j" jobs]
